# llama.cpp

./: Package.swift  convert-hf-to-gguf-update.py  convert-hf-to-gguf.py  ggml-metal.m  ggml-metal.metal  llama.cpp  llama.h  pyproject.toml
examples/llama.swiftui/llama.cpp.swift/: LibLlama.swift
examples/llama.swiftui/llama.swiftui/Models/: LlamaState.swift
models/tokenizers/gpt2-small-japanese-char/: tokenizer.json  tokenizer_config.json
spm-headers/: grammar-parser.h
