[tool.poetry]
name = "llama-cpp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "llama"}]

[tool.poetry.dependencies]
python = "^3.11"
sentencepiece = "^0.2.0"
torch = "^2.3.0"
numpy = "^1.26.4"
transformers = "^4.40.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
